# verifiable-inference

./: .gitignore  .pylintrc  Dockerfile-enclave  Makefile  README.md  mypy.ini
.github/workflows/: ci.yml
core/: pyproject.toml
core/src/core/: address.py  defaults.py  forward.py
core/tests/: test_utils.py
demo/: measurements.json
enclave/: README.md  mypy.ini  pyproject.toml  run.sh
enclave/src/enclave/: app.py  host_to_remote.py  host_to_vsock.py  main.py  query.py  utils.py
host/: pyproject.toml  query_anthropic.sh  query_ollama.sh  query_openai.sh  query_together.sh
host/src/host/: attestation_verifier.py  forward.py  utils.py  verify_attestation.py  verify_query.py
sample_data/: address  attestation.json  measurements.json  query.json
scripts/: demo  test_dev  test_enclave  test_verification
