[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
  "web3==7.8.0",
  "eth-account==0.13.5",
]

[project.optional-dependencies]
dev = [
  "mypy==1.15.0",
  "pylint==3.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core"]